--- a/themes/flux/src/styles/global.css
+++ b/themes/flux/src/styles/global.css
@@ -59,6 +59,7 @@
     opacity: 1;
   }
 }
+@layer base {
 
 html {
   scroll-behavior: smooth;
@@ -72,6 +73,8 @@ main {
   margin: 0;
   padding: 0;
 }
+}
+
 .sr-only {
   border: 0;
   padding: 0;
@@ -84,6 +87,7 @@ main {
   clip-path: inset(50%);
   white-space: nowrap;
 }
+@layer base {
 input[type="search"] {
   -webkit-appearance: none !important;
   -moz-appearance: none !important;
@@ -98,6 +102,8 @@ input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
   display: none;
 }
+}
+
 
 /* Блог (layouts/BlogPost.astro) */
 :root {
@@ -107,6 +113,7 @@ input[type="search"]::-webkit-search-results-decoration {
   --gray-dark: 34, 41, 57;
   --box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%);
 }
+@layer base {
 code {
   padding: 2px 5px;
   background-color: rgb(var(--gray-light));
@@ -123,4 +130,5 @@ blockquote {
   border-left: 4px solid var(--accent);
   padding: 0 0 0 20px;
   margin: 0;
+}
 }
